tests-integration/fixtures/checking/1778704620_reflectable_symbol_exact_instance/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Tag :: Tag
test :: Tag

Types
Tag :: Type

Instances
instance Reflectable @Symbol "hello" Tag

Roles
Tag = []

Diagnostics
error[CannotUnify]: Cannot unify 'String' with 'Tag'
  --> 12:8..12:43
   |
12 | test = reflectType (Proxy :: Proxy "hello")
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
